syntax = "proto3";
package auth.v1;
option go_package = "github.com/you/badminton-booking/proto/auth/v1;authv1";


message User { string id = 1; string email = 2; string name = 3; string role = 4; }
message RegisterRequest { string email = 1; string password = 2; string name = 3; string role = 4; }
message RegisterResponse { User user = 1; }
message LoginRequest { string email = 1; string password = 2; }
message LoginResponse { string access_token = 1; string refresh_token = 2; User user = 3; }
message ValidateTokenRequest { string token = 1; }
message ValidateTokenResponse { string user_id = 1; string role = 2; bool valid = 3; }


service AuthService {
rpc Register(RegisterRequest) returns (RegisterResponse);
rpc Login(LoginRequest) returns (LoginResponse);
rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}